--- a/background image.html
+++ b/background image.html
@@ -6,11 +6,11 @@
     <title>Docuent</title>
     <style>
         body{
-            
+           background-size:cover; 
         }
     </style>
 </head>
-<body style="background-image: url('https://jayachandra2.github.io./NDTV-Food-Blog/ronaldosilence.jpg');">
+<body style="background-image: url('https://jayachandra2.github.io./NDTV-Food-Blog/ronaldosilence.jpeg');">
     
 </body>
 </html>
