--- a/background image.html
+++ b/background image.html
@@ -10,7 +10,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('https://jayachandra2.github.io./NDTV-Food-Blog/ronaldosilence.jpeg');">
+<body style="background-image: url('https://jayachandra2.github.io./NDTV-Food-Blog/cr7.jpeg');">
     
 </body>
 </html>
