--- a/joinus.html
+++ b/joinus.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <h2 style="color:black;font-weight:bold;text-align:center;"> University Application Form</h2>
+    <h2 style="color:black;font-weight:bold;text-align:center;"> Application Form</h2>
     <form id="application_form" method="get" >
     <div class="container">
         
