--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
 <body>
 <div class="main">      
 <div class="title" style="background:linear-gradient(rgb(0,0,0,0.4),rgb(0,0,0,0.8),left);">
-<img id="title_image" src="./1000838840_177x110.jpg"/>
+<img id="title_image" src="./channa masala.html"/>
 <h1 id="title_font"style="text-align: center;">ndtv food Blog </h1> 
  </div>
 <nav class="navi">
