--- a/contact_us.html
+++ b/contact_us.html
@@ -6,35 +6,51 @@
     <title>NDTV Food Blog</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--this is used to import classes from font awesome site-->
     <style rel="stylesheet" type="text/css">
-        *{
-        
+        *{                                 /*this is applicable to the whole html page */
+                   
             margin:0;
             padding:0;
         }
-        .contact_para{
+        body{
+            background-color:rgba(0,0,0,0.5);
+        }
+        .contact_div{
+            margin:30%;
+            padding:10vh;
+            border-top:1px solid orange;
+            border-right: 1px solid red;
+            border-bottom:1px solid yellow;
+            border-left:1px solid pink;
+        }
+        .contact_para{                    /* contact page paragraph styling */
             text-align:center;
             margin-top:100px;
             font-size:large;
             color:azure;
         }
-        body{
-            background-color:rgba(0,0,0,0.5);
-        }
-        .contact_link{
+        .contact_link{                /* contact page links styling */
             color:yellow;
             text-decoration:none;
             border:none;
             text-align:center;
         }
-        .contact_address{
+        .contact_address{            /*contact page address tag styling */
             color:azure;
             text-align:center;
-        }
-        i{
+        }        
+        i{                           /*contact page icons styling */
             color:azure;
         }
-        @media only screen and (max-width:600px)
+        @media only screen and (max-width:600px)    /* mobile view stylings section  */
         {
+            .contact_div{
+            margin:10%;
+            padding:10vh;
+            border-top:1px solid orange;
+            border-right: 1px solid red;
+            border-bottom:1px solid yellow;
+            border-left:1px solid pink;
+        }
             .contact_para{
                 text-align:center;
                 margin-top:50px;
@@ -55,6 +71,7 @@
     </style>
 </head>
 <body>
+    <div class="contact_div">
     <p class="contact_para">
         If you want to join our team,</br>
         please send us mail:</br>
@@ -76,5 +93,6 @@
         Mumbai, India</br>
         pin : 400068
     </address>
+    </div>
 </body>
 </html>
