--- a/contact_us.html
+++ b/contact_us.html
@@ -15,12 +15,12 @@
             background-color:rgba(0,0,0,0.5);
         }
         .contact_div{
-            margin:30%;
-            padding:10vh;
-            border-top:1px solid orange;
-            border-right: 1px solid red;
-            border-bottom:1px solid yellow;
-            border-left:1px solid pink;
+            margin:20% 10%;
+            padding:5vh;
+            border-top:2px solid orange;
+            border-right: 2px solid red;
+            border-bottom:2px solid yellow;
+            border-left:2px solid pink;
         }
         .contact_para{                    /* contact page paragraph styling */
             text-align:center;
@@ -44,12 +44,12 @@
         @media only screen and (max-width:600px)    /* mobile view stylings section  */
         {
             .contact_div{
-            margin:10%;
-            padding:10vh;
-            border-top:1px solid orange;
-            border-right: 1px solid red;
-            border-bottom:1px solid yellow;
-            border-left:1px solid pink;
+            margin:5% 2%;
+            padding:2vh;
+            border-top:2px solid orange;
+            border-right:2px solid red;
+            border-bottom:2px solid yellow;
+            border-left:2px solid pink;
         }
             .contact_para{
                 text-align:center;
