--- a/contact_us.html
+++ b/contact_us.html
@@ -15,12 +15,12 @@
             background-color:rgba(0,0,0,0.5);
         }
         .contact_div{
-            margin:20% 10%;
-            padding:5vh;
-            border-top:2px solid orange;
+            margin:10% 5%;
+            padding:4vh;
+            border-top:2px solid cyan;
             border-right: 2px solid red;
             border-bottom:2px solid yellow;
-            border-left:2px solid pink;
+            border-left:2px solid green;
         }
         .contact_para{                    /* contact page paragraph styling */
             text-align:center;
@@ -44,12 +44,11 @@
         @media only screen and (max-width:600px)    /* mobile view stylings section  */
         {
             .contact_div{
-            margin:5% 2%;
-            padding:2vh;
-            border-top:2px solid orange;
+            margin:4% 2%;
+            border-top:2px solid cyan;
             border-right:2px solid red;
             border-bottom:2px solid yellow;
-            border-left:2px solid pink;
+            border-left:2px solid green;
         }
             .contact_para{
                 text-align:center;
