--- a/contact_us.html
+++ b/contact_us.html
@@ -17,10 +17,12 @@
         .contact_div{
             margin:10% 5%;
             padding:4vh;
-            border-top:2px solid cyan;
-            border-right: 2px solid red;
-            border-bottom:2px solid yellow;
-            border-left:2px solid green;
+            border-top:5px solid cyan;
+            border-right: 5px solid red;
+            border-bottom:5px solid yellow;
+            border-left:5px solid green;
+            border-radius:5px;
+            
         }
         .contact_para{                    /* contact page paragraph styling */
             text-align:center;
@@ -45,10 +47,11 @@
         {
             .contact_div{
             margin:4% 2%;
-            border-top:2px solid cyan;
-            border-right:2px solid red;
-            border-bottom:2px solid yellow;
-            border-left:2px solid green;
+            border-top:5px solid cyan;
+            border-right:5px solid red;
+            border-bottom:5px solid yellow;
+            border-left:5px solid green;
+            border-radius:5px;
         }
             .contact_para{
                 text-align:center;
