--- a/list.html
+++ b/list.html
@@ -9,14 +9,13 @@
 </head>
 <body>
 <div class="main">      
-<div class="title" style="background:linear-gradient(rgb(0,0,0,0.4),rgb(0,0,0,0.8),left);">
+<div class="title">
 <img id="title_image" src="./channa masala.html"/>
 <h1 id="title_font"style="text-align: center;">ndtv food Blog </h1> 
  </div>
 <nav class="navi">
 <ul>
     <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/Home.html">Home</a></li>
-    <li class="links"><a href="https:google.co.in" target="article_display">Social Networking</a></li>
     <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/channa%20masala.html" target="article_display">Channa Masala</a></li>
     <li class="links"><a href="./joinus.html" target="article_display">Join Us</a></li>
     <li class="links"><a href="./contact_us.html" target="article_display">Contact Us</a></li> <!---->
