--- a/Home.html
+++ b/Home.html
@@ -9,13 +9,13 @@
  <head>
 <body>
     <div class="main">      
-          <div class="title" style="background:linear-gradient(rgb(0,0,0,0.4),rgb(0,0,0,0.8),left);">
+          <div class="title">
             <img id="title_image" src="./ndtvfoodblogpic.jpg"/>
             <h1 id="title_font"style="text-align: center;">ndtv food Blog </h1> 
         </div>
         <nav class="navi">
             <ul>
-                <li class="links" style="height:2em;"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/list.html" target="_self">List</a></li>
+                <li class="links" style="height:2em;"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/list.html" target="_self">Menu</a></li>
             </ul>
         </nav>
     <div class="articles">
