--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">      
           <div class="title">
-            <img id="title_image" src="./ndtvfoodblogpic.jpg"/>
+            <img id="title_image" alt="NDTV Food Image" src="./ndtvfoodblogpic.jpg"/>
             <h1 id="title_font"style="text-align: center;">ndtv food Blog </h1> 
         </div>
         <nav class="navi">
